Corrección de agregarReserva()